--- a/Fittrack2.0/App.xaml
+++ b/Fittrack2.0/App.xaml
@@ -1,9 +1,16 @@
-﻿<Application x:Class="Fittrack2._0.App"
+﻿<Application x:Class="FitTrack2._0.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Fittrack2._0"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:FitTrack2._0"
+    StartupUri="View/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles/ColorStyles.xaml" />
+                <ResourceDictionary Source="Styles/TextBoxStyles.xaml" />
+                <ResourceDictionary Source="Styles/TextBlockStyles.xaml" />
+                <ResourceDictionary Source="Styles/BorderStyles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
