--- a/Fittrack2.0/View/AddWorkoutWindow.xaml
+++ b/Fittrack2.0/View/AddWorkoutWindow.xaml
@@ -1,9 +1,11 @@
-﻿<Window x:Class="Fittrack2._0.View.AddWorkoutWindow"
+﻿<Window x:Class="FitTrack2._0.View.AddWorkoutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:Fittrack2._0.View"
+        xmlns:local="clr-namespace:FitTrack2._0.View"
         xmlns:model="clr-namespace:FitTrack2._0.Model"
+        xmlns:converter="clr-namespace:Fittrack2._0.Converter"
         Title="Add Workout" Height="450" Width="800">
+    
     <Window.Background>
         <LinearGradientBrush StartPoint="0,0" EndPoint="1,0.4">
             <GradientStop Color="{StaticResource SecondaryColor2}" Offset="0.5"/>
@@ -13,25 +15,26 @@
         </LinearGradientBrush>
     </Window.Background>
 
-    <Window.Resources>
-        <!-- DataTemplates för dynamisk visning av Reps/Sets och Distance -->
+    <!--<Window.Resources>
+        <converter:EmptyStringToNullableIntConverter x:Key="EmptyStringToNullableIntConverter"/>
+        --><!-- DataTemplates för dynamisk visning av Reps/Sets och Distance --><!--
         <DataTemplate DataType="{x:Type model:StrengthWorkout}">
             <StackPanel>
                 <TextBlock Text="Reps:" FontWeight="Bold" Margin="0,10,0,0"/>
-                <TextBox Text="{Binding Reps, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox Text="{Binding Reps,Mode=TwoWay,Converter={StaticResource EmptyStringToNullableIntConverter}, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <TextBlock Text="Sets:" FontWeight="Bold" Margin="0,10,0,0"/>
-                <TextBox Text="{Binding Sets, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox Text="{Binding Sets, Mode=TwoWay, Converter={StaticResource EmptyStringToNullableIntConverter}, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
         </DataTemplate>
 
         <DataTemplate DataType="{x:Type model:CardioWorkout}">
             <StackPanel>
                 <TextBlock Text="Distance:" FontWeight="Bold" Margin="0,10,0,0"/>
-                <TextBox Text="{Binding Distance, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox Text="{Binding WorkoutDistance, Mode=TwoWay, Converter={StaticResource EmptyStringToNullableIntConverter},UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
         </DataTemplate>
-    </Window.Resources>
+    </Window.Resources>-->
 
     <Grid Margin="20">
         <Grid.RowDefinitions>
@@ -47,6 +50,7 @@
 
         <TextBlock Text="Add Workout" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" />
 
+        
         <!-- Workout Type ComboBox -->
         <Grid Grid.Row="1" Margin="0,10,0,0">
             <TextBlock Text="Workout Type:" />
@@ -57,8 +61,8 @@
 
         <!-- Workout Duration -->
         <Grid Grid.Row="2" Margin="0,10,0,0">
-           
-            <TextBox x:Name="WorkoutDurationTextBox" Text="{Binding WorkoutDuration, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBlock Text="Duration:" HorizontalAlignment="Left"/>
+            <TextBox x:Name="WorkoutDurationTextBox"  Text="{Binding WorkoutDuration, UpdateSourceTrigger=PropertyChanged,TargetNullValue=0, FallbackValue=0,StringFormat=hh\\:mm\\:ss}"  />
             <TextBlock Text="Enter duration (hh:mm:ss)"
                        Foreground="Gray"
                        VerticalAlignment="Center"
@@ -80,18 +84,38 @@
         <!-- Calories Burned -->
         
         <Grid Grid.Row="3" Margin="0,10,0,0">
-            <TextBlock Text="Enter calories:" HorizontalAlignment="Left"/>
-            <TextBox x:Name="WorkoutCaloriesTextBox"
-                     Text="{Binding WorkoutCaloriesBurned, UpdateSourceTrigger=PropertyChanged}"
-                     Width="200" Margin="0,10,0,10"/>
+            <StackPanel Orientation="Horizontal">
+            <TextBlock Text="Calories Burned:" FontWeight="Bold"/>
+                <TextBlock 
+                       HorizontalAlignment="Left"
+                       Width="200"
+                       Text="{Binding  WorkoutCaloriesBurned,Mode=OneWay}"/>
+                
+            </StackPanel>
+            
         </Grid>
+
 
         <!-- Workout Notes -->
         <Grid Grid.Row="4" Margin="0,10,0,0">
-            <!-- Dynamisk visning av fält baserat på Workout-typen -->
-            <TextBox x:Name="WorkoutNotesTextBox" Text="{Binding WorkoutNotes, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBlock Text="Notes:" HorizontalAlignment="Left"/>
+            <TextBox x:Name="WorkoutNotesTextBox" Text="{Binding WorkoutNotes, UpdateSourceTrigger=PropertyChanged}" Width="500"/>
         </Grid>
-        <ContentPresenter Content="{Binding Workout}" Grid.Row="5" Margin="0,10,0,0" />
+
+        <StackPanel Grid.Row="5" Visibility="{Binding StrenghtWorkoutVisibility}">
+            <StackPanel >
+                <TextBlock Text="Reps:" FontWeight="Bold" Margin="0,10,0,0"/>
+                <TextBox Text="{Binding  WorkoutReps, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
+                <TextBlock Text="Sets:" FontWeight="Bold" Margin="0,10,0,0"/>
+                <TextBox Text="{Binding WorkoutSets, UpdateSourceTrigger=PropertyChanged}" />
+            </StackPanel>
+        </StackPanel>
+
+        <StackPanel  Grid.Row="5" Visibility="{Binding CardioWorkoutVisibility}" >
+            <TextBlock Text="Distance:" FontWeight="Bold" Margin="0,10,0,0"/>
+            <TextBox Text="{Binding WorkoutDistance, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+        </StackPanel>
 
         <!-- Save and Cancel Buttons -->
         <StackPanel Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
