--- a/Fittrack2.0/View/MainWindow.xaml
+++ b/Fittrack2.0/View/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Fittrack2._0.View.MainWindow"
+﻿<Window x:Class="FitTrack2._0.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        xmlns:local="clr-namespace:Fittrack2._0.View"
+        xmlns:local="clr-namespace:FitTrack2._0.View"
        xmlns:converter="clr-namespace:FitTrack2._0.Converter"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
