--- a/Fittrack2.0/View/ResetPasswordWindow.xaml
+++ b/Fittrack2.0/View/ResetPasswordWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Fittrack2._0.View.ResetPasswordWindow"
+﻿<Window x:Class="FitTrack2._0.View.ResetPasswordWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Fittrack2._0.View"
+        xmlns:local="clr-namespace:FitTrack2._0.View"
         mc:Ignorable="d"
         Title="ResetPasswordWindow" Height="450" Width="800">
     <Window.Resources>
