--- a/Fittrack2.0/View/WorkoutDetailsWindow.xaml
+++ b/Fittrack2.0/View/WorkoutDetailsWindow.xaml
@@ -1,25 +1,26 @@
-﻿<Window x:Class="Fittrack2._0.View.WorkoutDetailsWindow"
+﻿<Window x:Class="FitTrack2._0.View.WorkoutDetailsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Fittrack2._0.View"
+        xmlns:local="clr-namespace:FitTrack2._0.View"
         xmlns:model="clr-namespace:FitTrack2._0.Model"
-        xmlns:converter="clr-namespace:Fittrack2._0.Converter"
+        xmlns:converter="clr-namespace:FitTrack2._0.Converter"
+        
         mc:Ignorable="d"
         Title="WorkoutDetailsWindow" Height="450" Width="800">
+   
+    
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
-        <BooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter" />
-
-        <DataTemplate DataType="{x:Type model:StrengthWorkout}">
+        <converter:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
+        <!--<DataTemplate DataType="{x:Type model:StrengthWorkout}">
             <StackPanel>
                 <TextBlock Text="Reps:" FontWeight="Bold" Margin="0,10,0,0"/>
                 <TextBox Text="{Binding DataContext.WorkoutReps, RelativeSource={RelativeSource AncestorType=Window}}"
                          IsReadOnly="{Binding DataContext.IsEditing, RelativeSource={RelativeSource AncestorType=Window}}"/>
-
                 <TextBlock Text="Sets:" FontWeight="Bold" Margin="0,10,0,0"/>
-                <TextBox Text="{Binding DataContext.WorkoutSets, RelativeSource={RelativeSource AncestorType=Window}}"
+                <TextBox Text="{Binding IsEditing, RelativeSource={RelativeSource AncestorType=Window}}"
                          IsReadOnly="{Binding DataContext.IsEditing, RelativeSource={RelativeSource AncestorType=Window}}"/>
             </StackPanel>
         </DataTemplate>
@@ -30,14 +31,33 @@
                 <TextBox Text="{Binding DataContext.WorkoutDistance, RelativeSource={RelativeSource AncestorType=Window}}" 
                          IsReadOnly="{Binding DataContext.IsEditing, RelativeSource={RelativeSource AncestorType=Window}}"/>
             </StackPanel>
+        </DataTemplate>-->
+        <DataTemplate DataType="{x:Type model:StrengthWorkout}">
+            <StackPanel>
+                <TextBlock Text="Reps:" FontWeight="Bold" Margin="0,10,0,0"/>
+                <TextBox Text="{Binding Reps}" 
+                     IsReadOnly="{Binding DataContext.IsReadOnly, RelativeSource={RelativeSource AncestorType=Window}}"/>
+
+                <TextBlock Text="Sets:" FontWeight="Bold" Margin="0,10,0,0"/>
+                <TextBox Text="{Binding Sets}" 
+                     IsReadOnly="{Binding DataContext.IsReadOnly, RelativeSource={RelativeSource AncestorType=Window}}"/>
+            </StackPanel>
         </DataTemplate>
+
+        <!-- CardioWorkout Template -->
+        <DataTemplate DataType="{x:Type model:CardioWorkout}">
+            <StackPanel>
+                <TextBlock Text="Distance:" FontWeight="Bold" Margin="0,10,0,0"/>
+                <TextBox Text="{Binding Distance}" 
+                     IsReadOnly="{Binding DataContext.IsReadOnly, RelativeSource={RelativeSource AncestorType=Window}}"/>
+            </StackPanel>
+        </DataTemplate>
+
 
     </Window.Resources>
     
-    
-    
-    
-    <Grid >
+
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="*"/>
@@ -51,6 +71,62 @@
                 </LinearGradientBrush>
             </Border.Background>
         </Border>
+        <Grid Grid.Column="0">
+            <StackPanel>
+                
+                <TextBlock Text="Workout Details" FontSize="24" FontWeight="Bold" Margin="0,0,20,0"/>
+                <Button Content="Edit" Command="{Binding EditCommand}"
+                        Visibility="{Binding IsEditing, Converter={StaticResource InverseBooleanToVisibilityConverter}}"/>
+                <Button Content="Save" Command="{Binding SaveCommand}"
+                        Visibility="{Binding IsEditing, Converter={StaticResource BoolToVisibilityConverter}}"/>
+                <Button Content="Cancel" Command="{Binding CancelCommand}"
+                        Visibility="{Binding IsEditing, Converter={StaticResource BoolToVisibilityConverter}}"/>
+                
+                <TextBlock Text="Error: Invalid input" Foreground="Red" FontWeight="Bold" Margin="0,10,0,0">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                            <Style.Triggers>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding HasAttemptedSave}" Value="True"/>
+                                        <Condition Binding="{Binding IsEditing}" Value="True"/>
+                                        <Condition Binding="{Binding WorkoutDate}" Value=""/>
+                                    </MultiDataTrigger.Conditions>
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </MultiDataTrigger>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding HasAttemptedSave}" Value="True"/>
+                                        <Condition Binding="{Binding IsEditing}" Value="True"/>
+                                        <Condition Binding="{Binding WorkoutType}" Value=""/>
+                                    </MultiDataTrigger.Conditions>
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </MultiDataTrigger>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding HasAttemptedSave}" Value="True"/>
+                                        <Condition Binding="{Binding IsEditing}" Value="True"/>
+                                        <Condition Binding="{Binding WorkoutDuration}" Value=""/>
+                                    </MultiDataTrigger.Conditions>
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </MultiDataTrigger>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding HasAttemptedSave}" Value="True"/>
+                                        <Condition Binding="{Binding IsEditing}" Value="True"/>
+                                        <Condition Binding="{Binding WorkoutCaloriesBurned}" Value="0"/>
+                                    </MultiDataTrigger.Conditions>
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </MultiDataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+               
+
+            </StackPanel>
+        </Grid>
         <Border Grid.Column="1">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,2" EndPoint="1,0.2">
@@ -65,45 +141,29 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
-                    <TextBlock Text="Workout Details" FontSize="24" FontWeight="Bold" Margin="0,0,20,0"/>
-                    <Button Content="Edit" Command="{Binding EditCommand}" Visibility="{Binding IsEditing, Converter={StaticResource InverseBooleanToVisibilityConverter}}"/>
-
-                    <Button Content="Save" Command="{Binding SaveCommand}"
-                            Visibility="{Binding IsEditing, Converter={StaticResource BoolToVisibilityConverter}}"/>
-                    <Button Content="Cancel" Command="{Binding CancelCommand}"
-                            Visibility="{Binding IsEditing, Converter={StaticResource BoolToVisibilityConverter}}"/>
-                </StackPanel>
-
                 <StackPanel Grid.Row="1" Margin="0,20">
                     <TextBlock Text="Date:" FontWeight="Bold"/>
-                    <TextBox Text="{Binding WorkoutDate}" IsReadOnly="{Binding IsEditing}"/>
-
+                    <TextBox Text="{Binding WorkoutDate}" IsReadOnly="{Binding IsReadOnly}"/>
                     <TextBlock Text="Type:" FontWeight="Bold" Margin="0,10,0,0"/>
-                    <TextBox Text="{Binding WorkoutType}" IsReadOnly="{Binding IsEditing}"/>
-
+                    <TextBox Text="{Binding WorkoutType}" IsReadOnly="{Binding IsReadOnly}"/>
                     <TextBlock Text="Duration:" FontWeight="Bold" Margin="0,10,0,0"/>
-                    <TextBox Text="{Binding WorkoutDuration}" IsReadOnly="{Binding IsEditing}"/>
-
+                    <TextBox Text="{Binding WorkoutDuration}" IsReadOnly="{Binding IsReadOnly}"/>
                     <TextBlock Text="Calories Burned:" FontWeight="Bold" Margin="0,10,0,0"/>
-                    <TextBox Text="{Binding WorkoutCaloriesBurned}" IsReadOnly="{Binding IsEditing}"/>
-
+                    <TextBox Text="{Binding WorkoutCaloriesBurned}" IsReadOnly="{Binding IsReadOnly}"/>
                     <TextBlock Text="Notes:" FontWeight="Bold" Margin="0,10,0,0"/>
-                    <TextBox Text="{Binding WorkoutNotes}" IsReadOnly="{Binding IsEditing}"/>
-                    
+                    <TextBox Text="{Binding WorkoutNotes}" IsReadOnly="{Binding IsReadOnly}"/>
                 </StackPanel>
-                <ContentPresenter Content="{Binding Workout}" />
+                <ContentPresenter Content="{Binding Workout}"/>
 
-                <!-- Åtgärdsknappar-->
+                <!-- Action buttons -->
                 <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,20">
                     <Button Content="Copy Workout" Command="{Binding CopyCommand}" Margin="0,0,10,0"/>
-
                     <Button Content="Delete Workout" Command="{Binding DeleteCommand}" Margin="0,0,10,0" 
-                        Visibility="{Binding CanDeleteWorkout, Converter={StaticResource BoolToVisibilityConverter}}"/>
-                    <Button Content="Back" Command="{Binding GoBackCommand}" />
+                            Visibility="{Binding CanDeleteWorkout, Converter={StaticResource BoolToVisibilityConverter}}"/>
                 </StackPanel>
-                <!-- Valideringsmeddelande -->
-                <TextBlock Text="Error: Invalid input" Foreground="Red" FontWeight="Bold" HorizontalAlignment="Left" Margin="0,10,0,0">
+
+                <!-- Validation message -->
+                <TextBlock >
                     <TextBlock.Style>
                         <Style TargetType="TextBlock">
                             <Setter Property="Visibility" Value="Collapsed"/>
@@ -126,6 +186,5 @@
                 </TextBlock>
             </Grid>
         </Border>
-
     </Grid>
 </Window>
