--- a/Fittrack2.0/View/WorkoutsWindow.xaml
+++ b/Fittrack2.0/View/WorkoutsWindow.xaml
@@ -1,15 +1,14 @@
-﻿<Window x:Class="Fittrack2._0.View.WorkoutsWindow"
+﻿<Window x:Class="FitTrack2._0.View.WorkoutsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Fittrack2._0.View"
+        xmlns:local="clr-namespace:FitTrack2._0.View"
         xmlns:converter="clr-namespace:FitTrack2._0.Converter"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="WorkoutsWindow" Height="450" Width="800">
     <Window.Resources>
-        <!-- Register NullToBooleanConverter as a resource -->
         <converter:NullToBooleanConverter x:Key="NullToBooleanConverter"/>
     </Window.Resources>
 
