--- a/Fittrack2.0/View/UserDetailsWindow.xaml
+++ b/Fittrack2.0/View/UserDetailsWindow.xaml
@@ -69,7 +69,7 @@
                 </StackPanel>
                 <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20">
                     <Button Content="Save" Command="{Binding SaveUserCommand}" />
-                    <Button Content="Delete" Command="{Binding CancelUserCommand }" Margin="10,0,0,0"/>
+                    <Button Content="Cancel" Command="{Binding CancelUserCommand }" Margin="10,0,0,0"/>
                     
                 </StackPanel>
                 <TextBlock Text="{Binding Message}" Foreground="Red" FontWeight="Bold" HorizontalAlignment="Center" Grid.Row="3"/>
